--- a/Summative 1 - Sudoku Solver/ASTAR - Callan Moore/ASTAR - Callan Moore/ASTAR - Callan Moore.vcxproj
+++ b/Summative 1 - Sudoku Solver/ASTAR - Callan Moore/ASTAR - Callan Moore/ASTAR - Callan Moore.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{839C9086-C5FC-4452-B025-3B1273D05074}</ProjectGuid>
+    <ProjectGuid>{78ED6751-AA41-4F53-986B-2A741EC8C81C}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>LuaIntegrationconsole</RootNamespace>
+    <RootNamespace>ASTARCallanMoore</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -41,13 +41,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\Users\Callan.moore\AppData\Local\Lua 5.1\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Users\Callan.moore\AppData\Local\Lua 5.1\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\Applications\Visual Leak Detector\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Applications\Visual Leak Detector\lib\Win32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>D:\Users\Callan.moore\AppData\Local\Lua 5.1\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Users\Callan.moore\AppData\Local\Lua 5.1\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -55,13 +53,12 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>lua5.1.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -72,19 +69,45 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>lua5.1.lib;lua51.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Backbuffer.cpp" />
+    <ClCompile Include="Clock.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameTile.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Backbuffer.h" />
+    <ClInclude Include="Clock.h" />
+    <ClInclude Include="Defines.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="GameTile.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ASTAR - Callan Moore.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Assets\1.bmp" />
+    <Image Include="Assets\2.bmp" />
+    <Image Include="Assets\3.bmp" />
+    <Image Include="Assets\4.bmp" />
+    <Image Include="Assets\5.bmp" />
+    <Image Include="Assets\6.bmp" />
+    <Image Include="Assets\7.bmp" />
+    <Image Include="Assets\8.bmp" />
+    <Image Include="Assets\9.bmp" />
+    <Image Include="Assets\blank.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
